# spotify-playlist-sorter

./: .cache  .gitignore  .spotify_credentials  pyproject.toml
app/: app.py  constants.py  playlist_sorter.py
